--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.3.5/split.min.js"></script>
